--- a/style.css
+++ b/style.css
@@ -1,246 +1,317 @@
+/* I esercizio */
 .ex-1-square {
-    width: 100px;
-    height: 100px;
-    border: 1px solid red;
-    transition: 2s;
+  width: 100px;
+  height: 100px;
+  border: 1px solid red;
 }
 
-.ex-1-square:hover{
-    background-color: red;;
+.ex-1-square {
+  transition: 2s;
+}
+
+.ex-1-square:hover {
+  background: red;
+}
+
+/* II esercizio */
+.ex-2-square {
+  width: 100px;
+  height: 100px;
+  background: red;
 }
 
 .ex-2-square {
-    width: 100px;
-    height: 100px;
-    background: red;
-    transition: 4s;
+  transition: 2s;
 }
 
-.ex-2-square:active{
-    width: 100%;
+.ex-2-square:active {
+  width: 100%;
+}
+
+/* III esercizio */
+.ex-3-square {
+  width: 100px;
+  height: 100px;
+  background: red;
 }
 
 .ex-3-square {
-    width: 100px;
-    height: 100px;
-    background: red;
-    transition: 4s;
+  transition: 4s;
 }
 
-.ex-3-square:hover{
-    border-radius: 50%;
+.ex-3-square:hover {
+  border-radius: 100%;
+}
+
+/* IV esercizio */
+.ex-4-square {
+  width: 100px;
+  height: 100px;
+  background: red;
 }
 
 .ex-4-square {
-    width: 100px;
-    height: 100px;
-    background: red;
-    transition: 4s;
+  transition: 3s;
 }
 
-.ex-4-square:hover{
-    opacity: 0;
+.ex-4-square:hover {
+  opacity: 0;
+}
+
+/* V esercizio */
+.ex-5-square {
+  margin: 20px;
+  width: 60px;
+  height: 60px;
+  background: red;
 }
 
 .ex-5-square {
-    margin: 20px;
-    width: 60px;
-    height: 60px;
-    background: red;
-    transition: 2s;
+  transition: 3s;
 }
+
 .ex-5-square:hover {
-    transform: scale(2);
+  transform: scale(2);
 }
+
 .ex-5-square:active {
-    transform: scale(.5);
+  transform: scale(0.5);
 }
 
-
-.ex-6-img, .ex-7-img, .ex-8-img {
-    width: 500px;
+/* VI esercizio */
+.ex-6-img {
+  width: 400px;
 }
 
 .ex-6-img:hover {
-    filter: grayscale(1);
+  filter: grayscale(1);
 }
 
+/* VII esercizio */
 .ex-7-img {
-    transition: 2s;
-}
-.ex-7-img:hover {
-    filter: grayscale(.5) sepia(.5);
+  width: 400px;
 }
 
-.ex-8-img {
-    transition: 2s;
+.ex-7-img:hover {
+  border-radius: 70%;
+  transition: 3s;
+  filter: brightness(200%);
 }
+
+/* VIII esercizio */
+.ex-8-img {
+  width: 500px;
+}
+
 .ex-8-img:hover {
-    filter: grayscale(.5) sepia(.5);
-    border-radius: 15px;
+  transition: 4s;
+}
+
+.ex-8-img:hover {
+  border-radius: 80%;
+  filter: grayscale(0.6) opacity(0.6);
+}
+
+/* IX esercizio */
+.ex-9-img {
+  margin: 50px 100px;
+  width: 400px;
 }
 
 .ex-9-img {
-    margin: 50px 100px;
-    width: 400px;
-    transition: 2s;
+  transition: 4s;
+}
+.ex-9-img:hover {
+  filter: grayscale(0.6) opacity(0.6);
+  border-radius: 30px;
+  transform: scale(1.6);
 }
 
-.ex-9-img:hover {
-    filter: grayscale(.6) sepia(.5);
-    border-radius: 20px;
-    transform: scale(1.5);
+/* X esercizio */
+.ex-10-icon {
+  font-size: 60px;
 }
 
 .ex-10-icon {
-    font-size: 60px;
-    animation: spin1 1s linear infinite;
+  animation: spin 1s linear infinite;
 }
 
-@keyframes spin1 {
-    0% {
-        transform: rotate(1turn);
-    }
+@keyframes spin {
+  0% {
+    transform: rotate(1turn);
+  }
 }
 
-
+/* XI esercizio */
 .ex-11-icon {
-    font-size: 60px;
+  font-size: 60px;
 }
 
-.ex-11-icon:hover{
-    animation: spin2 2s linear;
+.ex-11-icon:hover {
+  animation: spinALittleBit 2s linear;
 }
 
-@keyframes spin2 {
-    0% {
-        transform: rotate(0);
-    }
-    90% {
-        transform: rotate(270deg);
-    }
-    100% {
-        transform: rotate(0);
-    }
+@keyframes spinALittleBit {
+  0% {
+    transform: rotate(0);
+  }
+  90% {
+    transform: rotate(315deg);
+  }
+  100% {
+    transform: rotate(0);
+  }
 }
 
-.ex-12-button, .ex-13-button {
-    position: relative;
-    display: block;
-    width: 200px;
-    height: 70px;
-    text-transform: uppercase;
-    border: 3px solid #1b3c59;
-    color: #1b3c59;
-    font-size: 20px;
-    line-height: 70px;
-    text-align: center;
-    text-decoration: none;
+/* XII esercizio */
+.ex-12-button,
+.ex-13-button {
+  position: relative;
+  display: block;
+  width: 200px;
+  height: 70px;
+  text-transform: uppercase;
+  border: 3px solid #1b3c59;
+  color: #1b3c59;
+  font-size: 20px;
+  line-height: 70px;
+  text-align: center;
+  text-decoration: none;
 }
-}
-
-.ex-12-top-white, .ex-13-top-white {
-    position: absolute;
-    top: -10px;
-    left: 10%;
-    background: #f5f5f5;
-    width: 60px;
-    height: 20px;
-}
-
-.ex-12-bottom-white, .ex-13-bottom-white {
-    position: absolute;
-    bottom: -10px;
-    right: 20%;
-    background: #f5f5f5;
-    width: 60px;
-    height: 20px;
-}
-
 .ex-12-button:hover .ex-12-top-white {
-    animation: move1 2s linear infinite;
+  animation: moveTopWhite 2s linear;
 }
-@keyframes move1 {
-    0% {
-        left: 10%;
-    }
-    50% {
-        left: calc(100% - 60px);
-    }
-    100% {
-        left: 10%;
-    }
+@keyframes moveTopWhite {
+  0% {
+    left: 10%;
+  }
+  50% {
+    left: calc(100% - 60px);
+  }
+  100% {
+    left: 10%;
+  }
 }
 .ex-12-button:hover .ex-12-bottom-white {
-    animation: move2 2s linear infinite;
+  animation: moveBottomWhite 2s linear;
 }
-@keyframes move2 {
-    0% {
-        right: 20%;
-    }
-    50% {
-        right: calc(100% - 60px);
-    }
-    100% {
-        right: 20%;
-    }
+@keyframes moveBottomWhite {
+  0% {
+    right: 20%;
+  }
+  50% {
+    right: calc(100% - 60px);
+  }
+  100% {
+    right: 20%;
+  }
 }
 
 .ex-13-button:hover .ex-13-top-white {
-    animation: move3 2s linear infinite;
+  animation: moveTopWhiteCompletely 2s linear;
 }
-@keyframes move3 {
-    0% {
-        left: 10%;
-        top: -10px;
-    }
-    30% {
-        left: calc(100% - 30px);
-        top: -10px;
-    }
-    45% {
-        left: calc(100% - 30px);
-        top: 100%;
-    }
-    75% {
-        left: 0;
-        top: 100%;
-    }
-    90% {
-        left: -15px;
-        top: -10px;
-    }
-    100% {
-        left: 10%;
-        top: -10px;
-    }
+@keyframes moveTopWhiteCompletely {
+  0% {
+    left: 10%;
+    top: -10px;
+  }
+  30% {
+    left: calc(100% - 30px);
+    top: -10px;
+  }
+  45% {
+    left: calc(100% - 30px);
+    top: 100%;
+  }
+  75% {
+    left: 0;
+    top: 100%;
+  }
+  90% {
+    left: -15px;
+    top: -10px;
+  }
+  100% {
+    left: 10%;
+    top: -10px;
+  }
+}
+
+/* XIII esercizio */
+.ex-12-top-white,
+.ex-13-top-white {
+  position: absolute;
+  top: -10px;
+  left: 10%;
+  background: #f5f5f5;
+  width: 60px;
+  height: 20px;
+}
+.ex-12-bottom-white,
+.ex-13-bottom-white {
+  position: absolute;
+  bottom: -10px;
+  right: 20%;
+  background: #f5f5f5;
+  width: 60px;
+  height: 20px;
+}
+
+.ex-13-button:hover .ex-13-top-white {
+  animation: moveTopWhiteCompletely 2s linear;
+}
+@keyframes moveTopWhiteCompletely {
+  0% {
+    left: 10%;
+    top: -10px;
+  }
+  30% {
+    left: calc(100% - 30px);
+    top: -10px;
+  }
+  45% {
+    left: calc(100% - 30px);
+    top: 100%;
+  }
+  75% {
+    left: 0;
+    top: 100%;
+  }
+  90% {
+    left: -15px;
+    top: -10px;
+  }
+  100% {
+    left: 10%;
+    top: -10px;
+  }
 }
 .ex-13-button:hover .ex-13-bottom-white {
-    animation: move4 2s linear infinite;
+  animation: moveBottomWhiteCompletely 2s linear;
 }
-@keyframes move4 {
-    0% {
-        bottom: -10px;
-        right: 20%;
-    }
-    30% {
-        right: calc(100% - 30px);
-        bottom: -10px;
-    }
-    45% {
-        right: calc(100% - 30px);
-        bottom: 100%;
-    }
-    75% {
-        right: 0;
-        bottom: 100%;
-    }
-    90% {
-        right: -15px;
-        bottom: -10px;
-    }
-    100% {
-        bottom: -10px;
-        right: 20%;
-    }
+@keyframes moveBottomWhiteCompletely {
+  0% {
+    bottom: -10px;
+    right: 20%;
+  }
+  30% {
+    right: calc(100% - 30px);
+    bottom: -10px;
+  }
+  45% {
+    right: calc(100% - 30px);
+    bottom: 100%;
+  }
+  75% {
+    right: 0;
+    bottom: 100%;
+  }
+  90% {
+    right: -15px;
+    bottom: -10px;
+  }
+  100% {
+    bottom: -10px;
+    right: 20%;
+  }
 }
